--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,9 @@
     html, body {
       margin:0;
       padding: 0;
+      height:100%;
+      max-height: 100%;
+      max-width:100%;
     }
   </style>
 </head>
