--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KDB Studio 2</title>
+  <title>Boothroyd</title>
   <style type="text/css">
     html, body {
       margin:0;
